<resources>
    <string name="app_name">NewsApp</string>
    <string name="text_login">Login</string>
    <string name="please_sign_in_to_continue">Please Sign In to Continue</string>
    <string name="_image">Image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="text_qa_sign_up">Don’t have a account?</string>
</resources>